--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
-/* Error: Expected expression.
+/* Error: Undefined variable.
  *   ,
- * 8 | *{
- *   |  ^
+ * 6 |     background-color: v.$bakgroundColor;
+ *   |                       ^^^^^^^^^^^^^^^^^
  *   '
- *   sass\_variables.scss 8:2  @use
- *   sass\style.scss 3:1       root stylesheet */
+ *   sass\_header.scss 6:23  @use
+ *   sass\style.scss 4:1     root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Expected expression.\a   \2577 \a 8 \2502  *{\d\a   \2502   ^\a   \2575 \a   sass\\_variables.scss 8:2  @use\a   sass\\style.scss 3:1       root stylesheet";
+  content: "Error: Undefined variable.\a   \2577 \a 6 \2502      background-color: v.$bakgroundColor;\d\a   \2502                        ^^^^^^^^^^^^^^^^^\a   \2575 \a   sass\\_header.scss 6:23  @use\a   sass\\style.scss 4:1     root stylesheet";
 }
