--- a/styles/style.css
+++ b/styles/style.css
@@ -52,5 +52,58 @@ body:hover .main-header, .main-header:focus-within {
     gap: 30px;
   }
 }
+.main-footer .social-links h3 {
+  color: #ff4500;
+  margin-bottom: 10px;
+}
+
+.main-footer {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #ccc;
+  padding: 20px;
+  text-align: center;
+  border-top: 2px solid #ff4500;
+}
+.main-footer .footer-content {
+  margin-bottom: 15px;
+}
+.main-footer .social-links {
+  max-width: 600px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 15px;
+}
+.main-footer .social-links h3 {
+  grid-column: 1/-1;
+}
+.main-footer .social-links ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+.main-footer .social-links a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+.main-footer .social-links a:hover {
+  color: #ff4500;
+}
+
+@media (min-width: 600px) {
+  .social-links {
+    grid-template-columns: auto 1fr;
+    gap: 20px;
+  }
+  .social-links h3 {
+    grid-column: 1/3;
+  }
+  .social-links ul {
+    justify-content: flex-start;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
