Add utilities import to style.scss
se agrega utilities a style.scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,9 @@
 @use "variables";
 @use "mixins";
 
+// PLACEHOLDER & UTILITIES //
+@use 'utilities';
+
 // LAYOUT //
 @use "header";
 @use "footer";
