Add accent color to paragraph in home styles
se modifica color de <p> en audio

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -41,6 +41,7 @@ h2 {
     background-color: v.$fondo-transparente-gris-claro; 
     
     p {
+        color: v.$color-acento;
         margin-bottom: v.$espaciado-sm;
         font-weight: v.$peso-negrita;
     }
