--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
-/* Error: Undefined variable.
+/* Error: The target selector was not found.
+ * Use "@extend %contenedor-base !optional" to avoid this error.
  *    ,
- * 48 |     background-color: map-get($colores, fondo-claro);
- *    |                               ^^^^^^^^
+ * 44 |     @extend %contenedor-base; 
+ *    |     ^^^^^^^^^^^^^^^^^^^^^^^^
  *    '
- *   sass\_personajes.scss 48:31  @use
- *   sass\style.scss 17:1         root stylesheet */
+ *   sass\_personajes.scss 44:5  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 48 \2502      background-color: map-get($colores, fondo-claro);\d\a    \2502                                ^^^^^^^^\a    \2575 \a   sass\\_personajes.scss 48:31  @use\a   sass\\style.scss 17:1         root stylesheet";
+  content: 'Error: The target selector was not found.\aUse "@extend %contenedor-base !optional" to avoid this error.\a    \2577 \a 44 \2502      @extend %contenedor-base; \d\a    \2502      ^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   sass\\_personajes.scss 44:5  root stylesheet';
 }
